grammar.ebnf
(*
 * Kang v2 — EBNF Grammar
 *
 * 约定:
 *   "..."   字面量/关键字
 *   A | B   二选一
 *   [ A ]   可选 (0 或 1 次)
 *   { A }   重复 (0 或多次)
 *   IDENT   标识符: [a-zA-Z_][a-zA-Z0-9_]*
 *
 * 词法说明:
 *   空白字符 (空格、Tab) 被忽略，不作为语法标记。
 *   语句以 ";" 或换行结束，二者等效；EBNF 中以 ";" 表示。
 *   注释: "//" 至行尾, "/* ... */" (可嵌套? 否, 不嵌套)
 *)

(* ========================================================================
 * 1. 程序入口
 * ======================================================================== *)

Program        = { TopLevel } ;

TopLevel       = StructDef | FuncDef | ImportStmt ;

(* ========================================================================
 * 1.1 模块导入 (M7)
 *
 * 将其他文件中的顶层定义导入当前模块。导入路径相对于当前源文件所在目录解析。
 * 循环导入通过分离编译支持: 被导入模块的签名先注册, 体在链接期解析。
 * 所有顶层项默认可导入, 无需 pub/priv 修饰符 (v1)。
 * ======================================================================== *)

ImportStmt     = "import" IDENT "{" ImportItems "}" "from" STR_LIT ";" ;

ImportItems    = ImportItem { "," ImportItem } ;

ImportItem     = IDENT ;     (* 被导入的顶层函数名或结构体名 *)

(* ========================================================================
 * 2. 类型
 * ======================================================================== *)

BaseType       = "i32" | "f64" | "str" | "bool" | "void" | IDENT ;

Type           = BaseType
               | "[" BaseType "]" ;           (* 数组元素非数组, 禁止 [[T]] *)

(* ========================================================================
 * 3. 结构体定义 (仅限顶层)
 * ======================================================================== *)

StructDef      = "struct" IDENT "{" { Field } "}" ;

Field          = IDENT ":" Type ";" ;

(* ========================================================================
 * 4. 函数定义
 * ======================================================================== *)

ReturnType     = Type
               | "(" Type "," Type ")" ;        (* 二值返回, 仅用于函数返回 *)

FuncDef        = "def" IDENT "(" [ Params ] ")" "->" ReturnType Block ;

Params         = Param { "," Param } ;

Param          = IDENT ":" Type ;

(* ========================================================================
 * 5. 语句
 * ======================================================================== *)

Block          = "{" { Stmt } "}" ;

Stmt           = VarDecl
               | AssignStmt
               | ReturnStmt
               | IfStmt
               | ForStmt
               | ExprStmt
               | Block
               ;

VarBinding     = IDENT ":" Type        (* 具名绑定 *)
               | "_" ;                  (* discard, 无需类型标注 *)

VarDecl        = "var" VarBinding [ "," VarBinding ] "=" Expr ";" ;

AssignStmt     = LValue "=" Expr ";" ;

LValue         = IDENT
               | Expr "[" Expr "]"           (* 仅数组, str 禁止 → 语义检查 *)
               | Expr "." IDENT              (* 结构体字段 *)
               ;

ReturnStmt     = "return" [ Expr [ "," Expr ] ] ";" ;
               (* void: return;  单值: return e;  二值: return e1, e2; *)

IfStmt         = "if" Expr "then" Stmt [ "else" Stmt ] ;

ForStmt        = "for" "var" IDENT ":" Type "=" Expr ","
                 Expr ","
                 AssignStmtNoSemi            (* step: 赋值语句, 不带 ";" *)
                 "in" Block ;

AssignStmtNoSemi = LValue "=" Expr ;         (* for 循环 step 专用 *)

ExprStmt       = Expr ";" ;                  (* void 函数调用, 或忽略返回值 *)

(* ========================================================================
 * 6. 表达式 (按优先级从低到高)
 * ======================================================================== *)

(* ---- 最低优先级: 逻辑或 ---- *)

Expr           = OrExpr ;

OrExpr         = AndExpr { "||" AndExpr } ;

AndExpr        = EqExpr { "&&" EqExpr } ;

EqExpr         = CmpExpr { ( "==" | "!=" ) CmpExpr } ;

CmpExpr        = AddExpr { ( "<" | "<=" | ">" | ">=" ) AddExpr } ;

AddExpr        = MulExpr { ( "+" | "-" ) MulExpr } ;

MulExpr        = UnaryExpr { ( "*" | "/" ) UnaryExpr } ;

(* ---- 一元运算符 ---- *)

UnaryExpr      = ( "-" | "!" ) UnaryExpr
               | PostfixExpr ;

(* ---- 后缀操作 (左结合) ---- *)

PostfixExpr    = Primary { PostfixOp } ;

PostfixOp      = "(" [ Args ] ")"             (* 函数调用 *)
               | "[" Expr "]"                (* 索引 *)
               | "." IDENT                   (* 字段访问 *)
               ;

(* ---- 最高优先级: 基础表达式 ---- *)

Primary        = INT_LIT
               | FLOAT_LIT
               | STR_LIT
               | "true"
               | "false"
               | ArrayLit
               | StructLit
               | IDENT
               | "(" Expr ")"
               ;

(* ========================================================================
 * 7. 字面量
 * ======================================================================== *)

(* 整数: 十进制, 非负. 负数由一元 "-" 处理, 如 -1 ≡ -(1) *)
INT_LIT        = DIGIT { DIGIT } ;

(* 浮点: 必须有小数点, 非负. 负数由一元 "-" 处理 *)
FLOAT_LIT      = DIGIT { DIGIT } "." DIGIT { DIGIT } ;

(* 字符串: 双引号包裹, 支持转义 \n \t \\ \" \0 *)
STR_LIT        = "\"" { CHAR | ESCAPE } "\"" ;
ESCAPE         = "\\" ( "n" | "t" | "\\" | "\"" | "0" ) ;
CHAR           = (* 除 " 和 \ 和换行外的任意 Unicode 字符 *) ;

DIGIT          = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

(* 数组字面量: [elem0, elem1, ...] 或 [] *)
ArrayLit       = "[" [ Args ] "]" ;

(* 结构体构造: Name{field: val, ...}，必须全字段 *)
StructLit      = IDENT "{" [ FieldInits ] "}" ;
FieldInits     = FieldInit { "," FieldInit } ;
FieldInit      = IDENT ":" Expr ;

(* ========================================================================
 * 8. 参数/实参列表
 * ======================================================================== *)

Args           = Expr { "," Expr } ;

(* ========================================================================
 * 9. 语义约束 (语法层允许, 语义层拒绝)
 * ========================================================================
 *
 * 下列规则由语法分析放行, 交语义分析阶段检查:
 *
 *   - 禁止 [void]: BaseType 包含 void, 但语义层拒绝以 void 为数组元素
 *   - 禁止 void 结构体字段: Field 的 Type 可为 void, 语义层拒绝
 *   - 禁止直接递归结构体: IDENT 可为自身类型名, 语义层拒绝非数组自引用
 *   - LValue 校验: 语法允许任意 Expr 出现在赋值左侧, 语义层仅放行
 *                    变量名 / arr[i] (arr 为数组) / obj.field (obj 为结构体)
 *   - str 索引禁止左值: s[i] 语法匹配 LValue, 语义层拒绝 str 索引赋值
 *   - 空结构体: 语法允许 { Field } 零次重复, v1 语义层建议禁止 (简化 LLVM 布局)
 *   - 比较链式: a < b < c 语法解析为 (a < b) < c, 语义层拒绝 bool < i32
 *   - 结构体全字段初始化: StructLit 语法允许零字段, 语义层要求逐字段赋值
 *   - 非 void 函数所有路径 return: 语法不保证, 语义层做控制流分析
 *   - 函数重载: 语法允许同名 FuncDef, 语义层拒绝用户自定义函数重名
 *   - 二值返回类型匹配: 语法约束至多 2 个返回值, 语义层检查 return 值与声明一致
 *   - var 二值接收数量匹配: 语法约束至多 2 个接收变量, 语义层检查与返回值数一致
 *   - (T1,T2) 仅限 ReturnType: 语法已排除 Type 中的二值形式, var/param/field 不可用
 *   - "_" discard: IDENT 包含 "_", 语义层在多接收 var 中不绑定 "_" 为真实变量
 *
 * ========================================================================
 * 10. 词法 (供参考, 由 logos 实现)
 * ======================================================================== *)

(*
   IDENT  = [a-zA-Z_][a-zA-Z0-9_]*
           (排除关键字: def, var, return, if, else, then, for, in, struct,
                        i32, f64, str, bool, void, true, false)

   关键字:
     def    var    return   if     else   then
     for    in     struct   i32    f64
     str    bool   void     true   false

   运算符/分隔符:
     +   -   *   /   <   <=   >   >=
     ==  !=  &&  ||  !   =
     (   )   [   ]   {   }
     :   ;   ,   ->  .
*)
