kangc/src/parser.rs
// 语法分析 — 手写递归下降解析器 (LL(1))
// 将 Token 流按 EBNF 文法生成 AST，每个非终结符对应一个 parse_* 函数
// Token 流由 lexer 模块生成，包含 EOF 哨兵

use crate::ast::*;
use crate::error::ParseError;
use crate::lexer::{Token, TokenKind};
use crate::stats::ParseStats;
use std::collections::HashMap;
use std::ops::Range;
use std::time::Instant;

// 限制 token 数防超大输入耗尽内存；1M tokens ≈ 50MB 源码。可通过 KANG_MAX_TOKENS 环境变量覆盖
fn max_token_count() -> usize {
    use std::sync::LazyLock;
    static LIMIT: LazyLock<usize> = LazyLock::new(|| read_env_limit("KANG_MAX_TOKENS", 1_000_000));
    *LIMIT
}

// 限制嵌套深度防栈溢出。可通过 KANG_MAX_DEPTH 环境变量覆盖
fn max_parse_depth() -> usize {
    use std::sync::LazyLock;
    static LIMIT: LazyLock<usize> = LazyLock::new(|| read_env_limit("KANG_MAX_DEPTH", 256));
    *LIMIT
}

/// 从环境变量读取解析限制值，或使用默认值
fn read_env_limit(env_name: &str, default: usize) -> usize {
    if let Ok(val) = std::env::var(env_name) {
        if let Ok(n) = val.parse::<usize>() {
            if n > 0 { return n; }
        }
    }
    default
}

// ── Parser 结构 ─────────────────────────────────────────────────────────────

/// 空 token 流回退哨兵 — Parser 公开 API 接受任意切片，lexer 总是产出 EOF，但防御性编程
static EOF_SENTINEL: Token = Token {
    kind: TokenKind::Eof,
    line: 0,
    col: 0,
    span: 0..0,
};

struct Parser<'a> {
    tokens: &'a [Token],
    pos: usize,
    depth: usize,
}

impl<'a> Parser<'a> {
    fn new(tokens: &'a [Token]) -> Self {
        debug_assert!(!tokens.is_empty(), "Token 流不应为空，至少包含 EOF 哨兵");
        Parser { tokens, pos: 0, depth: 0 }
    }

    /// 进入递归层级，超限则报错
    fn enter_depth(&mut self, ctx: &str) -> Result<(), ParseError> {
        self.depth += 1;
        if self.depth > max_parse_depth() {
            return Err(self.error(format!(
                "{} 嵌套深度超过限制 {}",
                ctx, max_parse_depth()
            )));
        }
        Ok(())
    }

    fn leave_depth(&mut self) {
        self.depth -= 1;
    }

    // ── 基本操作 ─────────────────────────────────────────────────────────

    fn peek(&self) -> &Token {
        if self.pos < self.tokens.len() {
            &self.tokens[self.pos]
        } else {
            // 空 token 流或越界：返回静态 EOF 哨兵避免 panic
            &EOF_SENTINEL
        }
    }

    fn peek_kind(&self) -> &TokenKind {
        &self.peek().kind
    }

    fn advance(&mut self) -> &Token {
        if self.tokens.is_empty() {
            return &EOF_SENTINEL;
        }
        let t = &self.tokens[self.pos];
        // 防止越过 EOF 导致 peek panic
        self.pos = (self.pos + 1).min(self.tokens.len() - 1);
        t
    }

    /// 期望特定 TokenKind，匹配则前进，否则报错
    /// 使用全等比较而非 discriminant，避免 `Ident("foo")` 误匹配 `Ident("bar")`
    fn expect(&mut self, expected: &TokenKind) -> Result<(), ParseError> {
        if self.peek_kind() == expected {
            self.pos += 1;
            Ok(())
        } else {
            Err(self.error(format!(
                "期望 {:?}，但得到 {:?}",
                expected, self.peek_kind()
            )))
        }
    }

    /// 如果当前 token 匹配则前进并返回 true
    /// TokenKind 的所有关键字变体都是 unit variant，故全等比较与 discriminant 等价
    fn match_kw(&mut self, kw: &TokenKind) -> bool {
        if self.peek_kind() == kw {
            self.pos += 1;
            true
        } else {
            false
        }
    }

    fn current_span(&self) -> Range<usize> {
        self.peek().span.clone()
    }

    fn error(&self, msg: String) -> ParseError {
        let t = self.peek();
        ParseError {
            msg,
            line: t.line,
            col: t.col,
            span: t.span.clone(),
            is_incomplete: matches!(t.kind, TokenKind::Eof),
        }
    }

    // ── 类型解析 ─────────────────────────────────────────────────────────
    // BaseType = "i32" | "f64" | "str" | "bool" | "void" | IDENT
    // Type     = BaseType | "[" BaseType "]"

    fn parse_base_type(&mut self) -> Result<BaseType, ParseError> {
        match self.peek_kind() {
            TokenKind::TI32 => { self.advance(); Ok(BaseType::I32) }
            TokenKind::TF64 => { self.advance(); Ok(BaseType::F64) }
            TokenKind::TStr => { self.advance(); Ok(BaseType::Str) }
            TokenKind::TBool => { self.advance(); Ok(BaseType::Bool) }
            TokenKind::TVoid => { self.advance(); Ok(BaseType::Void) }
            TokenKind::Ident(name) => {
                let mut n = name.clone();
                self.advance();
                // 支持 module.Type 形式的导入类型引用
                if self.match_kw(&TokenKind::Dot) {
                    let suffix = self.expect_ident()?;
                    n = format!("{}.{}", n, suffix);
                }
                Ok(BaseType::UserDef(n))
            }
            _ => Err(self.error(format!("期望类型，但得到 {:?}", self.peek_kind()))),
        }
    }

    fn parse_type(&mut self) -> Result<Type, ParseError> {
        if self.match_kw(&TokenKind::LBracket) {
            let bt = self.parse_base_type()?;
            self.expect(&TokenKind::RBracket)?;
            Ok(Type::Array(bt))
        } else {
            Ok(Type::Base(self.parse_base_type()?))
        }
    }

    // ReturnType = Type | "(" Type "," Type ")"
    fn parse_return_type(&mut self) -> Result<ReturnType, ParseError> {
        if self.match_kw(&TokenKind::LParen) {
            let t1 = self.parse_type()?;
            self.expect(&TokenKind::Comma)?;
            let t2 = self.parse_type()?;
            self.expect(&TokenKind::RParen)?;
            Ok(ReturnType::Pair(t1, t2))
        } else {
            Ok(ReturnType::Single(self.parse_type()?))
        }
    }

    // ── 表达式解析 (按优先级) ────────────────────────────────────────────
    // Expr = OrExpr

    fn parse_expr(&mut self) -> Result<Expr, ParseError> {
        self.enter_depth("表达式")?;
        let result = self.parse_or_expr();
        self.leave_depth();
        result
    }

    // OrExpr = AndExpr { "||" AndExpr }
    fn parse_or_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_and_expr()?;
        while self.match_kw(&TokenKind::OrOr) {
            let right = self.parse_and_expr()?;
            left = Expr::Binary { left: Box::new(left), op: BinOp::Or, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // AndExpr = EqExpr { "&&" EqExpr }
    fn parse_and_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_eq_expr()?;
        while self.match_kw(&TokenKind::AndAnd) {
            let right = self.parse_eq_expr()?;
            left = Expr::Binary { left: Box::new(left), op: BinOp::And, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // EqExpr = CmpExpr { ("==" | "!=") CmpExpr }
    fn parse_eq_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_cmp_expr()?;
        loop {
            let op = match self.peek_kind() {
                TokenKind::EqEq => { self.advance(); BinOp::Eq }
                TokenKind::Neq => { self.advance(); BinOp::Neq }
                _ => break,
            };
            let right = self.parse_cmp_expr()?;
            left = Expr::Binary { left: Box::new(left), op, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // CmpExpr = AddExpr { ("<" | "<=" | ">" | ">=") AddExpr }
    fn parse_cmp_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_add_expr()?;
        loop {
            let op = match self.peek_kind() {
                TokenKind::Lt => { self.advance(); BinOp::Lt }
                TokenKind::Le => { self.advance(); BinOp::Le }
                TokenKind::Gt => { self.advance(); BinOp::Gt }
                TokenKind::Ge => { self.advance(); BinOp::Ge }
                _ => break,
            };
            let right = self.parse_add_expr()?;
            left = Expr::Binary { left: Box::new(left), op, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // AddExpr = MulExpr { ("+" | "-") MulExpr }
    fn parse_add_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_mul_expr()?;
        loop {
            let op = match self.peek_kind() {
                TokenKind::Plus => { self.advance(); BinOp::Add }
                TokenKind::Minus => { self.advance(); BinOp::Sub }
                _ => break,
            };
            let right = self.parse_mul_expr()?;
            left = Expr::Binary { left: Box::new(left), op, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // MulExpr = UnaryExpr { ("*" | "/") UnaryExpr }
    fn parse_mul_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_unary_expr()?;
        loop {
            let op = match self.peek_kind() {
                TokenKind::Star => { self.advance(); BinOp::Mul }
                TokenKind::Slash => { self.advance(); BinOp::Div }
                _ => break,
            };
            let right = self.parse_unary_expr()?;
            left = Expr::Binary { left: Box::new(left), op, right: Box::new(right), span: self.current_span() };
        }
        Ok(left)
    }

    // UnaryExpr = ("-" | "!") UnaryExpr | PostfixExpr
    fn parse_unary_expr(&mut self) -> Result<Expr, ParseError> {
        if self.match_kw(&TokenKind::Minus) {
            let expr = self.parse_unary_expr()?;
            Ok(Expr::Unary { op: UnaryOp::Neg, expr: Box::new(expr), span: self.current_span() })
        } else if self.match_kw(&TokenKind::Bang) {
            let expr = self.parse_unary_expr()?;
            Ok(Expr::Unary { op: UnaryOp::Not, expr: Box::new(expr), span: self.current_span() })
        } else {
            self.parse_postfix_expr()
        }
    }

    // PostfixExpr = Primary { "(" [Args] ")" | "[" Expr "]" | "." IDENT }
    fn parse_postfix_expr(&mut self) -> Result<Expr, ParseError> {
        let mut expr = self.parse_primary()?;
        loop {
            match self.peek_kind() {
                TokenKind::LParen => {
                    self.advance();
                    let args = self.parse_args()?;
                    self.expect(&TokenKind::RParen)?;
                    expr = Expr::Call { func: Box::new(expr), args, span: self.current_span() };
                }
                TokenKind::LBracket => {
                    self.advance();
                    let index = self.parse_expr()?;
                    self.expect(&TokenKind::RBracket)?;
                    expr = Expr::Index { array: Box::new(expr), index: Box::new(index), span: self.current_span() };
                }
                TokenKind::Dot => {
                    self.advance();
                    let field = self.expect_ident()?;
                    expr = Expr::FieldAccess { obj: Box::new(expr), field, span: self.current_span() };
                }
                _ => break,
            }
        }
        Ok(expr)
    }

    // Primary = INT_LIT | FLOAT_LIT | STR_LIT | "true" | "false"
    //         | ArrayLit | StructLit | IDENT | "(" Expr ")"
    fn parse_primary(&mut self) -> Result<Expr, ParseError> {
        match self.peek_kind() {
            TokenKind::IntLit(v) => {
                let val = v.clone();
                self.advance();
                Ok(Expr::IntLit(val, self.current_span()))
            }
            TokenKind::FloatLit(v) => {
                let val = v.clone();
                self.advance();
                Ok(Expr::FloatLit(val, self.current_span()))
            }
            TokenKind::StrLit(v) => {
                let val = v.clone();
                self.advance();
                Ok(Expr::StrLit(val, self.current_span()))
            }
            TokenKind::True => { self.advance(); Ok(Expr::BoolLit(true, self.current_span())) }
            TokenKind::False => { self.advance(); Ok(Expr::BoolLit(false, self.current_span())) }
            TokenKind::Ident(name) => {
                let mut n = name.clone();
                self.advance();
                // 支持 module.Type 形式, 用于结构体构造: module.Type{...}
                if self.peek_kind() == &TokenKind::Dot {
                    let saved_pos = self.pos;
                    self.advance(); // consume .
                    if let TokenKind::Ident(suffix) = self.peek_kind() {
                        let suffix = suffix.clone();
                        self.advance();
                        if self.peek_kind() == &TokenKind::LBrace {
                            n = format!("{}.{}", n, suffix);
                            return self.parse_struct_lit_tail(&n);
                        }
                        // 不是 struct lit, 回退: 返回 Ident, 让 postfix 解析 .field
                        self.pos = saved_pos;
                    } else {
                        self.pos = saved_pos;
                    }
                }
                // 判断是否为结构体构造: Name { ... }
                if self.peek_kind() == &TokenKind::LBrace {
                    self.parse_struct_lit_tail(&n)
                } else {
                    Ok(Expr::Ident(n, self.current_span()))
                }
            }
            // 类型名也可作为函数名出现在调用表达式中 (如 i32("42"))
            TokenKind::TI32 => { self.advance(); self.check_call_or_ident("i32") }
            TokenKind::TF64 => { self.advance(); self.check_call_or_ident("f64") }
            TokenKind::TStr => { self.advance(); self.check_call_or_ident("str") }
            TokenKind::TBool => { self.advance(); self.check_call_or_ident("bool") }
            TokenKind::LBracket => {
                self.advance();
                let elems = self.parse_args()?;
                self.expect(&TokenKind::RBracket)?;
                Ok(Expr::ArrayLit(elems, self.current_span()))
            }
            TokenKind::LParen => {
                self.advance();
                let expr = self.parse_expr()?;
                self.expect(&TokenKind::RParen)?;
                Ok(expr)
            }
            _ => Err(self.error(format!(
                "表达式开头有未预期的 token: {:?}",
                self.peek_kind()
            ))),
        }
    }

    /// 类型关键字后可能接 `{` (结构体构造) 或后缀操作 (函数调用)
    fn check_call_or_ident(&mut self, name: &str) -> Result<Expr, ParseError> {
        if self.peek_kind() == &TokenKind::LBrace {
            self.parse_struct_lit_tail(name)
        } else {
            Ok(Expr::Ident(name.to_string(), self.current_span()))
        }
    }

    // StructLit = IDENT "{" [FieldInits] "}"
    fn parse_struct_lit_tail(&mut self, name: &str) -> Result<Expr, ParseError> {
        self.expect(&TokenKind::LBrace)?;
        let fields = if self.peek_kind() == &TokenKind::RBrace {
            vec![]
        } else {
            self.parse_field_inits()?
        };
        self.expect(&TokenKind::RBrace)?;
        Ok(Expr::StructLit { name: name.to_string(), fields, span: self.current_span() })
    }

    // FieldInits = FieldInit { "," FieldInit }
    fn parse_field_inits(&mut self) -> Result<Vec<(String, Expr)>, ParseError> {
        let mut fields = vec![self.parse_field_init()?];
        while self.match_kw(&TokenKind::Comma) {
            fields.push(self.parse_field_init()?);
        }
        Ok(fields)
    }

    // FieldInit = IDENT ":" Expr
    fn parse_field_init(&mut self) -> Result<(String, Expr), ParseError> {
        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let val = self.parse_expr()?;
        Ok((name, val))
    }

    // ── Args ──────────────────────────────────────────────────────────────

    fn parse_args(&mut self) -> Result<Vec<Expr>, ParseError> {
        if self.is_at_arg_end() {
            return Ok(vec![]);
        }
        let mut args = vec![self.parse_expr()?];
        while self.match_kw(&TokenKind::Comma) {
            args.push(self.parse_expr()?);
        }
        Ok(args)
    }

    /// 参数列表的终止符
    fn is_at_arg_end(&self) -> bool {
        matches!(
            self.peek_kind(),
            TokenKind::RParen | TokenKind::RBracket | TokenKind::RBrace
        )
    }

    // ── 语句解析 ─────────────────────────────────────────────────────────
    // Stmt = VarDecl | AssignStmt | ReturnStmt | IfStmt | ForStmt | ExprStmt | Block

    fn parse_stmt(&mut self) -> Result<Stmt, ParseError> {
        match self.peek_kind() {
            TokenKind::Var => self.parse_var_decl(),
            TokenKind::Return => self.parse_return_stmt(),
            TokenKind::If => self.parse_if_stmt(),
            TokenKind::For => self.parse_for_stmt(),
            TokenKind::LBrace => self.parse_block(),
            _ => self.parse_expr_or_assign(),
        }
    }

    // Block = "{" { Stmt } "}"
    fn parse_block(&mut self) -> Result<Stmt, ParseError> {
        self.enter_depth("语句块")?;
        // 闭包确保 leave_depth 在所有返回路径上执行
        let result = (|| {
            self.expect(&TokenKind::LBrace)?;
            let mut stmts = Vec::new();
            while self.peek_kind() != &TokenKind::RBrace && self.peek_kind() != &TokenKind::Eof {
                stmts.push(self.parse_stmt()?);
            }
            self.expect(&TokenKind::RBrace)?;
            Ok(Stmt::Block(stmts, self.current_span()))
        })();
        self.leave_depth();
        result
    }

    // VarDecl = "var" VarBinding [ "," VarBinding ] "=" Expr ";"
    fn parse_var_decl(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&TokenKind::Var)?;
        let mut bindings = vec![self.parse_var_binding()?];
        if self.match_kw(&TokenKind::Comma) {
            bindings.push(self.parse_var_binding()?);
        }
        self.expect(&TokenKind::Assign)?;
        let init = self.parse_expr()?;
        self.expect(&TokenKind::Semi)?;
        Ok(Stmt::VarDecl { bindings, init: Box::new(init), span: self.current_span() })
    }

    // VarBinding = IDENT ":" Type | "_"
    fn parse_var_binding(&mut self) -> Result<VarBinding, ParseError> {
        // 先看是不是 "_"
        if let TokenKind::Ident(name) = self.peek_kind() {
            if name == "_" {
                self.advance();
                return Ok(VarBinding::Discard);
            }
        }
        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let ty = self.parse_type()?;
        Ok(VarBinding::Named { name, ty })
    }

    // 表达式语句或赋值语句
    // 语法层将任意 Expr 作为左值放行，语义层负责检查 LValue 合法性
    fn parse_expr_or_assign(&mut self) -> Result<Stmt, ParseError> {
        let mark = self.pos;
        // 先解析为表达式
        let expr = self.parse_expr()?;

        // 如果后面是 `=`, 则转为赋值语句
        if self.match_kw(&TokenKind::Assign) {
            let value = self.parse_expr()?;
            self.expect(&TokenKind::Semi)?;
            let lvalue = expr_to_lvalue(expr, mark, self.tokens)?;
            return Ok(Stmt::Assign { lvalue, value: Box::new(value), span: self.current_span() });
        }

        // 否则是表达式语句，需要分号
        self.expect(&TokenKind::Semi)?;
        Ok(Stmt::Expr(Box::new(expr), self.current_span()))
    }

    // ReturnStmt = "return" [ Expr [ "," Expr ] ] ";"
    fn parse_return_stmt(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&TokenKind::Return)?;
        let values = if self.peek_kind() == &TokenKind::Semi {
            vec![]
        } else {
            let mut vals = vec![self.parse_expr()?];
            if self.match_kw(&TokenKind::Comma) {
                vals.push(self.parse_expr()?);
            }
            vals
        };
        self.expect(&TokenKind::Semi)?;
        Ok(Stmt::Return { values, span: self.current_span() })
    }

    // IfStmt = "if" Expr "then" Stmt [ "else" Stmt ]
    fn parse_if_stmt(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&TokenKind::If)?;
        let condition = self.parse_expr()?;
        self.expect(&TokenKind::Then)?;
        let then_branch = self.parse_stmt()?;
        let else_branch = if self.match_kw(&TokenKind::Else) {
            Some(Box::new(self.parse_stmt()?))
        } else {
            None
        };
        Ok(Stmt::If { condition: Box::new(condition), then_branch: Box::new(then_branch), else_branch, span: self.current_span() })
    }

    // ForStmt = "for" "var" IDENT ":" Type "=" Expr ","
    //           Expr ","
    //           AssignStmtNoSemi
    //           "in" Block
    fn parse_for_stmt(&mut self) -> Result<Stmt, ParseError> {
        self.expect(&TokenKind::For)?;
        self.expect(&TokenKind::Var)?;
        let var_name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let var_type = self.parse_type()?;
        self.expect(&TokenKind::Assign)?;
        let start = self.parse_expr()?;
        self.expect(&TokenKind::Comma)?;
        let end = self.parse_expr()?;
        self.expect(&TokenKind::Comma)?;
        // step: 赋值语句不带分号
        let step_mark = self.pos;
        let step_expr_full = self.parse_expr()?;
        self.expect(&TokenKind::Assign)?;
        let step_val = self.parse_expr()?;
        let step_lvalue = expr_to_lvalue(step_expr_full, step_mark, self.tokens)?;
        self.expect(&TokenKind::In)?;
        let body = self.parse_block()?;
        Ok(Stmt::For {
            var_name,
            var_type,
            start: Box::new(start),
            end: Box::new(end),
            step_lvalue,
            step_expr: Box::new(step_val),
            body: Box::new(body),
            span: self.current_span(),
        })
    }

    // ── 顶层解析 ─────────────────────────────────────────────────────────
    // StructDef = "struct" IDENT "{" { Field } "}"
    // Field     = IDENT ":" Type ";"

    fn parse_struct_def(&mut self) -> Result<StructDef, ParseError> {
        self.expect(&TokenKind::Struct)?;
        let name = self.expect_ident()?;
        self.expect(&TokenKind::LBrace)?;
        let mut fields = Vec::new();
        while self.peek_kind() != &TokenKind::RBrace && self.peek_kind() != &TokenKind::Eof {
            let field_name = self.expect_ident()?;
            self.expect(&TokenKind::Colon)?;
            let field_type = self.parse_type()?;
            self.expect(&TokenKind::Semi)?;
            fields.push((field_name, field_type));
        }
        self.expect(&TokenKind::RBrace)?;
        Ok(StructDef { name, fields })
    }

    // FuncDef = "def" IDENT "(" [ Params ] ")" "->" ReturnType Block
    fn parse_func_def(&mut self) -> Result<FuncDef, ParseError> {
        self.expect(&TokenKind::Def)?;
        let name = self.expect_ident()?;
        self.expect(&TokenKind::LParen)?;
        let params = if self.peek_kind() == &TokenKind::RParen {
            vec![]
        } else {
            self.parse_params()?
        };
        self.expect(&TokenKind::RParen)?;
        self.expect(&TokenKind::Arrow)?;
        let return_type = self.parse_return_type()?;
        // parse_block 保证返回 Stmt::Block
        let body = match self.parse_block()? {
            Stmt::Block(stmts, ..) => stmts,
            _ => return Err(self.error("内部错误: 期望 Block 语句".into())),
        };
        Ok(FuncDef { name, params, return_type, body })
    }

    // Params = Param { "," Param }
    fn parse_params(&mut self) -> Result<Vec<(String, Type)>, ParseError> {
        let mut params = vec![self.parse_param()?];
        while self.match_kw(&TokenKind::Comma) {
            params.push(self.parse_param()?);
        }
        Ok(params)
    }

    // Param = IDENT ":" Type
    fn parse_param(&mut self) -> Result<(String, Type), ParseError> {
        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let ty = self.parse_type()?;
        Ok((name, ty))
    }

    // ImportStmt = "import" IDENT "{" ImportItems "}" "from" STR_LIT ";"
    fn parse_import_stmt(&mut self) -> Result<ImportStmt, ParseError> {
        self.expect(&TokenKind::Import)?;
        let alias = self.expect_ident()?;
        self.expect(&TokenKind::LBrace)?;
        let items = self.parse_import_items()?;
        self.expect(&TokenKind::RBrace)?;
        self.expect(&TokenKind::From)?;
        let path = match self.peek_kind() {
            TokenKind::StrLit(s) => {
                let p = s.clone();
                self.advance();
                p
            }
            _ => return Err(self.error(format!("期望字符串路径，但得到 {:?}", self.peek_kind()))),
        };
        self.expect(&TokenKind::Semi)?;
        Ok(ImportStmt { alias, items, path, span: self.current_span() })
    }

    // ImportItems = ImportItem { "," ImportItem }
    fn parse_import_items(&mut self) -> Result<Vec<String>, ParseError> {
        if self.peek_kind() == &TokenKind::RBrace {
            return Ok(vec![]);
        }
        let mut items = vec![self.expect_ident()?];
        while self.match_kw(&TokenKind::Comma) {
            items.push(self.expect_ident()?);
        }
        Ok(items)
    }
